--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>282_DA_NGUYEN DUC DUONG</title>
+<title>The Elsesho</title>
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" href="css/all.min.css">
 <link rel="stylesheet" href="css/multi-slide.css">
@@ -1509,21 +1509,7 @@
 		$('.blog-bg').height(blog);
 		$('.blog-grid').height(blog);
 });
-	$(window).resize(function(){
-	var chieucao=$('.sub-img').height();
-	$('.sub-banner').height(chieucao);
-	var imgheight=$('.img-1').height();
-	$('.pr-img').height(imgheight);
-	var cao=$('.sub-2img').height();
-	$('.sub-banner-2').height(cao);
-				var h=$('.sub-2img').height()-36;
-	$('.subcribe').height(h);
-		var blog=$('#blog-img').height();
-		$('.blog-bg').height(blog);
-		$('.blog-grid').height(blog);
-		
-		
-});
+
 	$(window).scroll(function(){
 	if($(window).scrollTop()>110)
 		{
